# pgdiffusion

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: generate_alpha_grid.py
examples/data/: adata_minimal.h5ad  trajectories.json
pgdiffusion/: __init__.py  build_graph.py  diffuse.py
